network-policies/cloudflare-boundary.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflared-boundary
  namespace: cloudflare
spec:
  podSelector:
    matchLabels:
      app: cloudflared
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 2000
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - protocol: UDP
          port: 443
        - protocol: TCP
          port: 443
        - protocol: UDP
          port: 7844
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
      ports:
        - protocol: TCP
          port: 80 # startpage & audiobookshelf
        - protocol: TCP
          port: 4533 # navidrome
        - protocol: TCP
          port: 5000 # kavita
        - protocol: TCP
          port: 8080 # kiwix
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mealie
      ports:
        - protocol: TCP
          port: 9000
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-assistant
      ports:
        - protocol: TCP
          port: 8123
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: booklore
      ports:
        - protocol: TCP
          port: 6060    
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: booru
          podSelector:
            matchLabels:
              app: szuru-client
      ports:
        - protocol: TCP
          port: 80
