network-policies/postgres-lockdown.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-lockdown
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mealie
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: booru
          podSelector:
            matchLabels:
              app: szuru-server
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 5432
